[gd_scene load_steps=4 format=3 uid="uid://dtbjmspmboi7i"]

[ext_resource type="Script" uid="uid://cmti2gwkxibov" path="res://Scenes/Microgames/MicrogameScripts/YesNo/yes_no.gd" id="1_2ug65"]
[ext_resource type="PackedScene" uid="uid://b70ircgtoali6" path="res://Scenes/Microgames/MicrogameScripts/Suplex/input_display.tscn" id="2_013mu"]
[ext_resource type="PackedScene" uid="uid://djcwmijuduuvd" path="res://Scenes/Microgames/MicrogameScripts/YesNo/yes_no_item.tscn" id="3_bxces"]

[node name="YesNo" type="Node"]
script = ExtResource("1_2ug65")

[node name="InputDisplay" parent="." instance=ExtResource("2_013mu")]
offset_top = 331.0
offset_bottom = 331.0

[node name="YesNoItem" parent="." instance=ExtResource("3_bxces")]
position = Vector2(297.5, 548.5)

[node name="YesNoItem2" parent="." instance=ExtResource("3_bxces")]
position = Vector2(692.5, 545.5)
